--- a/resume.html
+++ b/resume.html
@@ -5,13 +5,13 @@ title: 이력서
 
 <style>
     .ContectBox {
-        margin-top: 40px;
+        margin-top: 30px;
         text-align: center;
     }
 
     .ContectBox ul {
         display: inline-block;
-        margin: 0 30px;
+        margin: 40px 30px 0;
     }
 
     .ContectBox li::marker {
