프로젝트 설명 수정
간결하며 구체적으로 알아보기 쉽게 수정함

--- a/resume.html
+++ b/resume.html
@@ -153,8 +153,11 @@ title: 이력서
                 2022-10-05 ~ 2022-11-30 (2개월)
             </td>
             <td>
-                개발중인 앱에 자사 모듈(MEE Engine, 얼굴인식)을 탑재한 버젼 전달<br>
-                추후 개발진행 시 요구되는 선행 작업을 확인
+                협업사 샘플 앱 개발 지원
+                <ui>
+                    <li>자사 SDK 적용</li>
+                    <li>기술 제휴 시 요구되는 선행 작업 확인</li>
+                </ui>
             </td>
         </tr>
         <tr>
@@ -164,9 +167,10 @@ title: 이력서
                 2022-08-02 ~ 2023-02-20 (7개월)
             </td>
             <td>
-                클래스룸 컨텐츠 추가 개발 & 유지 보수<br>
-                자습실 컨텐츠 개발<br>
-                라이브 서비스 중 이슈 대응
+                <ui>
+                    <li>자사 SDK 적용</li>
+                    <li>클라이언트 파트 개발 지원</li>
+                </ui>
             </td>
         </tr>
         <tr>
@@ -176,7 +180,10 @@ title: 이력서
                 2022-07-27 ~ 2022-08-01 (4일)
             </td>
             <td>
-                전용 SDK 랩핑 클래스 제작 지원으로 클라이언트 파트의 작업 능률 향상<br>
+                <ui>
+                    <li>전용 SDK 제작 지원</li>
+                    <li>SDK를 적용하지 못하던 문제를 해결함</li>
+                </ui>
             </td>
         </tr>
         <tr>
@@ -186,8 +193,10 @@ title: 이력서
                 2022-06-01 ~ 2022-07-31 (2개월)
             </td>
             <td>
-                인식률 저하 이슈 원인 특정<br>
-                개선 방안 검토 & 테스트 & 적용
+                <ui>
+                    <li>기기테스트를 통해 인식률 저하 이슈 원인 특정</li>
+                    <li>개선 방법 제시 & 적용</li>
+                </ui>
             </td>
         </tr>
     </table>
@@ -215,9 +224,11 @@ title: 이력서
                 2021-07-01 ~ 2021-08-31 (2개월)
             </td>
             <td>
-                Unity 3D에서 URP로 프로젝트 환경 변경 완료<br>
-                변경된 환경에서 컨텐츠 3편 제작<br>
-                컨텐츠에 3D오브젝트와 라이트를 적용하여 시각적인 퀄리티 향상을 확인함
+                Art파트의 요청으로 개발 환경 변경
+                <ui>
+                    <li>Unity 3D에서 URP로 프로젝트 환경 변경</li>
+                    <li>컨텐츠에 3D오브젝트와 라이트를 적용하여 시각적인 퀄리티 향상을 확인</li>
+                </ui>
             </td>
         </tr>
         <tr>
@@ -227,11 +238,13 @@ title: 이력서
                 2020-09-01 ~ 2021-02-01 (5개월)
             </td>
             <td>
-                다수의 과학관 앱 통합<br>
-                AR기능 에러 수정(상용버젼이 유료화되어 사용할 수 없던 AR기능(Vuforia)을 교체하여 정상화)<br>
-                크로스플랫폼 지원_ AOS, IOS (양대 마켓 출시)<br>
-                동적운영되는 이벤트의 QR체크 시스템<br>
-                다국어 지원을 위한 홈툴 개발 (기획팀 지원)
+                다수의 앱을 통합 & 보수 & 업데이트
+                <ui>
+                    <li>AR기능 에러 수정(상용버젼이 유료화되어 사용할 수 없던 AR기능(Vuforia)을 교체하여 정상화)</li>
+                    <li>크로스플랫폼 지원 (AOS, IOS 양대 마켓 출시)</li>
+                    <li>동적 운영되는 이벤트의 QR체크 시스템 (앱개발 담당)</li>
+                    <li>다국어 지원을 위한 홈툴 개발 (기획팀 지원)</li>
+                </ui>
             </td>
         </tr>
         <tr>
@@ -241,10 +254,13 @@ title: 이력서
                 2019-12-16 ~ 2021-03-01 (1년 3개월)
             </td>
             <td>
-                교육용 인터렉티브 컨텐츠 서비스 개발<br>
-                서비스 Loader와 Launcher, 1년차 서비스 Contents 10여편 제작<br>
-                서비스 구독 & 판매를 위한 라이선스 기능 개발<br>
-                영업팀에서 라이선스 발급에 사용할 홈툴 제작(Sha2-256 암호화 기술, DLL사용)
+                교육용 인터렉티브 컨텐츠 서비스
+                <ui>
+                    <li>서비스 구동을 위한 Loader, Launcher 개발</li>
+                    <li>1년차 서비스 컨텐츠 10여편 제작</li>
+                    <li>서비스 구독 & 판매를 위한 라이선스 기능 개발 (Sha2-256 암호화 기술, DLL사용)</li>
+                    <li>라이선스 발급에 사용할 홈툴 제작 (영업팀 지원)</li>
+                </ui>
             </td>
         </tr>
     </table>
@@ -260,8 +276,10 @@ title: 이력서
                 2020-08-01 ~ 2020-12-01 (4개월)
             </td>
             <td>
-                스토리형 리듬게임 데모<br>
-                2020 BuStar PC데모 출품
+                스토리형 리듬게임 데모
+                <ui>
+                    <li>2020 BuStar PC데모 출품</li>
+                </ui>
             </td>
         </tr>
         <tr>
@@ -271,8 +289,11 @@ title: 이력서
                 2020-05-24 ~ 2021-06-02 (2주)
             </td>
             <td>
-                선물용<br>
-                지인이 모 소설의 팬활동으로 그린 그림을 apk로 제작
+                선물용 팬게임
+                <ui>
+                    <li>지인의 팬아트를 리소스로 하여 앱 제작</li>
+                    <li>Android Native 화면캡쳐와 이미지 저장 기능 사용</li>
+                </ui>
             </td>
         </tr>
         <tr>
@@ -282,9 +303,11 @@ title: 이력서
                 2019-10-23 ~ 2019-12-02 (2개월)
             </td>
             <td>
-                3D게임<br>
-                게임의 UI 구현<br>
-                유저 편의기능 구현
+                3D게임
+                <ui>
+                    <li>맵, UI를 3D환경에서 구현</li>
+                    <li>유저 편의기능(키 매핑) 구현</li>
+                </ui>
             </td>
         </tr>
         <tr>
@@ -294,8 +317,10 @@ title: 이력서
                 2019-05-29 ~ 2019-08-20 (3개월)
             </td>
             <td>
-                횡스크롤 2D게임<br>
-                PC/Mobile 크로스플랫폼 지원
+                횡스크롤 2D게임
+                <ui>
+                    <li>PC/Mobile 크로스플랫폼 지원</li>
+                </ui>
             </td>
         </tr>
     </table>
