--- a/resume.html
+++ b/resume.html
@@ -167,9 +167,9 @@ title: 이력서
                 2022-08-02 ~ 2023-02-20 (7개월)
             </td>
             <td>
+                클라이언트 파트 개발 지원
                 <ui>
-                    <li>자사 SDK 적용</li>
-                    <li>클라이언트 파트 개발 지원</li>
+                    <li>자사 SDK를 사용하는 서비스 개발</li>
                 </ui>
             </td>
         </tr>
@@ -180,9 +180,10 @@ title: 이력서
                 2022-07-27 ~ 2022-08-01 (4일)
             </td>
             <td>
+                Client파트 요청으로 전용 SDK 제작 지원
                 <ui>
-                    <li>전용 SDK 제작 지원</li>
-                    <li>SDK를 적용하지 못하던 문제를 해결함</li>
+                    <li>비동기 작업을 이벤트 형식으로 랩핑</li>
+                    <li>숙련도가 낮은 작업자도 SDK를 사용할 수 있도록 함</li>
                 </ui>
             </td>
         </tr>
@@ -193,6 +194,7 @@ title: 이력서
                 2022-06-01 ~ 2022-07-31 (2개월)
             </td>
             <td>
+                사용자 환경에 따른 이슈 해결
                 <ui>
                     <li>기기테스트를 통해 인식률 저하 이슈 원인 특정</li>
                     <li>개선 방법 제시 & 적용</li>
@@ -227,7 +229,7 @@ title: 이력서
                 Art파트의 요청으로 개발 환경 변경
                 <ui>
                     <li>Unity 3D에서 URP로 프로젝트 환경 변경</li>
-                    <li>컨텐츠에 3D오브젝트와 라이트를 적용하여 시각적인 퀄리티 향상을 확인</li>
+                    <li>3D오브젝트와 라이트를 적용하여 시각적인 퀄리티 향상을 확인</li>
                 </ui>
             </td>
         </tr>
@@ -240,8 +242,8 @@ title: 이력서
             <td>
                 다수의 앱을 통합 & 보수 & 업데이트
                 <ui>
-                    <li>AR기능 에러 수정(상용버젼이 유료화되어 사용할 수 없던 AR기능(Vuforia)을 교체하여 정상화)</li>
-                    <li>크로스플랫폼 지원 (AOS, IOS 양대 마켓 출시)</li>
+                    <li>상용버젼이 유료화되어 사용할 수 없던 AR기능(Vuforia)을 교체하여 정상화</li>
+                    <li>크로스플랫폼 지원 (PlayStore, AppStore 양대 마켓 출시)</li>
                     <li>동적 운영되는 이벤트의 QR체크 시스템 (앱개발 담당)</li>
                     <li>다국어 지원을 위한 홈툴 개발 (기획팀 지원)</li>
                 </ui>
@@ -257,7 +259,6 @@ title: 이력서
                 교육용 인터렉티브 컨텐츠 서비스
                 <ui>
                     <li>서비스 구동을 위한 Loader, Launcher 개발</li>
-                    <li>1년차 서비스 컨텐츠 10여편 제작</li>
                     <li>서비스 구독 & 판매를 위한 라이선스 기능 개발 (Sha2-256 암호화 기술, DLL사용)</li>
                     <li>라이선스 발급에 사용할 홈툴 제작 (영업팀 지원)</li>
                 </ui>
@@ -276,9 +277,10 @@ title: 이력서
                 2020-08-01 ~ 2020-12-01 (4개월)
             </td>
             <td>
-                스토리형 리듬게임 데모
+                스토리형 리듬게임 PC데모 (2020 BuStar 출품)
                 <ui>
-                    <li>2020 BuStar PC데모 출품</li>
+                    <li>순서대로 수행하는 미션 시스템 구현</li>
+                    <li>이벤트로 발생하는 퀘스트 시스템 구현</li>
                 </ui>
             </td>
         </tr>
