--- a/resume.html
+++ b/resume.html
@@ -137,7 +137,7 @@ title: 이력서
     <h3 id="workExperience">주요 경력 사항</h3>
     <div style="margin: 10px; margin-top:40px;">
         <h4 id="co2" style="display: inline; margin: 0;">주식회사 마블러스</h4>
-        <p style="display: inline; margin: 0;"> 2022-04 ~ 2023-03<br>Solution팀 선임연구원</p>
+        <p style="display: inline; margin: 0;"> 2022-04 ~ 2023-03<br>Solution팀 선임연구원<br>주요업무: Android Studio로 작업된 자사 솔루션을 패키징하여 Unity에 탑재, 사용 가능하도록 업무지원</p>
         <div>
             <img style="display: inline-block;" alt="untiy3d icon badge"
                 src="https://img.shields.io/badge/Unity-000000?style=Flat&logo=Unity&logoColor=white">
@@ -204,7 +204,7 @@ title: 이력서
     </table>
     <div style="margin: 10px; margin-top:40px;">
         <h4 id="co1" style="display: inline; margin: 0;">(주)지앤플렉스</h4>
-        <p style="display: inline; margin: 0;"> 2019-12 ~ 2022-04<br>컨텐츠팀 선임연구원</p>
+        <p style="display: inline; margin: 0;"> 2019-12 ~ 2022-04<br>컨텐츠팀 선임연구원<br>주요업무: Unity를 사용하여 인터렉티브 컨텐츠 제작</p>
         <div>
             <img style="display: inline-block;" alt="untiy3d icon badge"
                 src="https://img.shields.io/badge/Unity-000000?style=Flat&logo=Unity&logoColor=white">
@@ -349,7 +349,7 @@ title: 이력서
 <div>
     <h3 id="education">학력</h3>
     <ul>
-        <li>2023-04 ~ 2023-09 멋쟁이사자처럼 앱/안드로이드 스쿨 수료(예정)</li>
+        <li>2023-04 ~ 2023-09 멋쟁이사자처럼 앱/안드로이드 스쿨 수료</li>
         <li>2022-04 ~ 2022-08 학점은행제 컴퓨터공학사 취득</li>
         <li>2019-02 ~ 2019-10 게임프로그램 개발자 양성과정 수료</li>
     </ul>
